app/stylesheets/sass/partials/b-cart.sass
.b-cart
  &__content
    @extend .b-layout
    padding-top: 15px

  &__title
    text-transform: uppercase
    padding: 18px 0 15px
    border: 1px solid $basicBorderColor
    border-width: 1px 0
    margin: 0
    text-align: center
    font-weight: normal
    font-size: 1.286em

  &__title-price
    display: inline-block

  &__message
    padding: 38px 0

    max-width: 500px
    margin: 47px auto 0
    text-align: center
    p
      margin: 0 0 100px
      font-size: 1.571em

  &__list,
  &__total-sum,
  &__action
    margin: 47px 0 0

  &__total-sum
    text-align: right
    font-size: 2.143em
    @include grid-media-query(palm)
      text-align: center

  &__action
    padding-bottom: 40px
    &__container
      @extend %grid

    &__col
      &-clear,
      &-right,
      &-back,
      &-submit
        @extend %grid__item

      &-clear
        @extend %six-twelfths
        @extend %lap--four-twelfths
        @extend %palm--one-whole
        @extend %desk--three-twelfths

      &-right
        @extend %six-twelfths
        @extend %lap--eight-twelfths
        @extend %palm--one-whole
        @extend %push--desk--three-twelfths
        text-align: right
        @include grid-media-query("palm")
          padding-top: 10px

      &-back,
      &-submit
        @extend %five-twelfths
        @extend %palm--one-whole

      &-code,
      &-submit
        width: 46%
        display: inline-block
        vertical-align: top

        .coupon-info
          margin-top: 10px

        @include grid-media-query("palm")
          width: 100%

          .coupon-info
            margin-top: 0
            margin-bottom: 10px

      &-submit
        padding-left: 0
        margin-left: 2%
        .b-cart__action__next,
        .b-cart__action__submit
          width: 100%
          margin-left: 0
        @include grid-media-query("palm")
          margin-left: 0

    &__next,
    &__submit
      padding-top: 13px
      padding-bottom: 13px

    &__next,
      width: 46%
      margin-left: 2%
      display: inline-block
      vertical-align: top

    &__code
      border: 1px solid #e2e2e2
      padding: 14px 3px 13px 17px
      box-sizing: border-box
      width: 100%
      @include grid-media-query("palm")
        text-align: center
        margin: 0 0 10px

    &__next
      @include grid-media-query("palm")
        width: 100%
        margin-left: 0

    &__submit
      @include grid-media-query("palm")
        width: 100%
        margin-left: 0

    &__clear
      display: block


  &__list
    list-style: none
    padding: 0

  &__item
    @extend %grid
    padding-bottom: 25px
    position: relative
    // С этим нужно что-то делать
    // font-size: 0

    &__img
      width: 100%

    &__title,
    &__option
      margin: 0
      font-size: 1em

    &__option
      margin-top: 3px

    &__price
      font-size: 1.25em
      margin-top: -5px

    &__quantity, &__weight
      &__text
        display: inline-block
        vertical-align: middle
        margin-right: 10px
        font-size: .875em
        @include grid-media-query("palm")
          display: block
      &__select
        max-width: 60px
        display: inline-block
        vertical-align: middle
        @include grid-media-query((lap, palm))
          max-width: 90%
          display: block
        select
          width: 100%
          box-sizing: border-box
          font-size: .875em
      &__input
        max-width: 60px
        display: inline-block
        vertical-align: middle
        @include grid-media-query((lap, palm))
          max-width: 90%
          display: block
        input
          width: 100%
          box-sizing: border-box
          font-size: .875em
    &__remove
      display: block
      border-radius: 17px
      width: 34px
      height: 34px
      background-color: #bcbcbc
      cursor: pointer
      transition: background-color 0.2s ease
      img
        width: 100%
      @include grid-media-query("palm")
        position: absolute
        right: 0
        top: 0

    &__col
      &-img,
      &-content,
      &-quantity,
      &-weight,
      &-price,
      &-remove
        @extend %grid__item

      &-img
        @extend %two-twelfths
        @extend %palm--three-twelfths

      &-content
        @extend %four-twelfths
        @extend %palm--nine-twelfths
        @include grid-media-query("palm")
          padding-right: 30px

      // &-quantity
      //   @extend %three-twelfths
      //   @extend %portable--four-twelfths


      &-price
        @extend %two-twelfths
        @extend %push--palm--three-twelfths
        @extend %palm--five-twelfths

      &-quantity
        @extend %three-twelfths
        @extend %push--palm--three-twelfths
        @extend %palm--four-twelfths
      &-weight
        @extend %three-twelfths
        @extend %push--palm--three-twelfths
        @extend %palm--four-twelfths

      &-price,
      &-quantity
        @include grid-media-query((lap, palm))
          padding-top: 10px

      &-remove
        @extend %one-twelfth
        // @extend %lap--one-twelfths

  &__item_spec
    padding-top: 40px
    padding-bottom: 40px
    border: 1px solid $basicBorderColor
    border-width: 1px 0
    font-size: 1em

    .b-cart__item__title
      margin-bottom: 22px
      font-weight: 400
      font-size: 1.786em
      line-height: 1.44em

    .b-cart__item__col-content
      @extend %six-twelfths
      @extend %palm--nine-twelfths

    .b-form__radio
      margin-bottom: 10px
      & + .b-btn
        margin-top: 15px

  &__form
    max-width: 580px
    margin: 55px auto 0
    &__delivery-name,
    &__delivery-price
      display: inline-block
      vertical-align: top
      @include grid-media-query("palm")
        width: auto
    &__delivery-name
      width: 65%
      position: relative
      top: -3px
      font-size: 1.214em
    &__delivery-price
      width: 30%
      text-align: right

    .b-cart__action
      margin: 0
      padding: 0

    .cart__form__delivery-address
      margin: 10px 0

    &__inner
      // @extend %grid
      // @extend %grid--wide
      margin-bottom: 55px
      @include grid-media-query((lap, palm))
        margin-bottom: 0

    &__data-row
      input:focus
        outline: 0
    //   @extend %grid__item
    //   @extend %four-twelfths
    //   @extend %lap--one-whole
    //   @extend %palm--one-whole

    @include grid-media-query("lap")
      margin-left: auto
      margin-right: auto
    @include grid-media-query("palm")
      margin-left: 0
      .cart__form__delivery-address
        font-size: .875em

